Adding firebase code to viewModel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="label_article_news">Berita Terbaru</string>
     <string name="message_if_no_news">Tidak ada berita</string>
     <string name="action_show_all"><![CDATA[Lihat Semua >]]></string>
+    <string name="request_none_data">.................</string>
 </resources>
